--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/build.xml
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/build.xml
@@ -130,7 +130,7 @@
 			<fileset dir="${build.result.folder}" includes="sqlmodel.edit.jar"/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="true" overwrite="false">
-			<fileset dir="${basedir}" includes="plugin.xml,sqlmodel.edit.jar,plugin.properties,icons/,about.html"/>
+			<fileset dir="${basedir}" includes="plugin.xml,META-INF/,sqlmodel.edit.jar,plugin.properties,icons/,about.html"/>
 		</copy>
 		<copy todir="${destination.temp.folder}/${module.name}_${plugin.version}" failonerror="false" overwrite="false">
 			<fileset dir="${basedir}" includes="sqlmodel.editsrc.zip"/>
