--- a/plugins/org.eclipse.datatools.modelbase.derby/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.derby/build.properties
@@ -1,13 +1,14 @@
 # <copyright>
 # </copyright>
 #
-# $Id$
+# $Id: build.properties,v 1.1 2006/03/07 00:58:26 dpchou Exp $
 
 bin.includes = .,\
                model/,\
                META-INF/,\
                plugin.xml,\
-               plugin.properties
+               plugin.properties,\
+               about.html
 jars.compile.order = .
 source.. = src/
 output.. = bin/
