[131450] Use OSGi class loading and plugin extension framework

--- a/plugins/org.eclipse.datatools.connectivity.oda/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/build.properties
@@ -7,7 +7,7 @@
 # http://www.eclipse.org/legal/epl-v10.html
 #
 # Contributors:
-#  Actuate Corporation  - initial API and implementation
+#  Actuate Corporation - initial API and implementation
 #  
 #************************************************************************
 #
@@ -19,12 +19,11 @@ test.src.dir =       	 ./test/
 bin.dir =         		 ./bin/
 jars.compile.order =     oda.jar,\
                          odaconsumer-helper.jar
-jars.extra.classpath =   lib/birt-core.jar
+jars.extra.classpath =   
 bin.includes = about.html,\
                plugin.xml,\
                oda.jar,\
                odaconsumer-helper.jar,\
-               lib/birt-core.jar,\
                schema/datasource.exsd,\
                META-INF/
 jar.includes =           **/*.txt,\
