[131616] Update preference page structure and names; update new wizard categories and view categories for consistency

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core.ui/plugin.properties
@@ -31,7 +31,7 @@ datatools.core.ui.preferences.labeldecorators = Label Decorations
 #
 ## Preferences
 #
-datatools.core.ui.preferences.data = Data
+datatools.core.ui.preferences.data = SQL Development
 datatools.core.ui.preferences.output = Output
 
 #
