--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
@@ -29,4 +29,4 @@ DSE.ContentExtension.Decorator = Connection Profile Decorator
 DSE.ContentExtension.Decorator.Description = Decorate content extension node when connecting to the server fails.
 DSE.content = Data Source Explorer Extension
 
-category.name.dataTools = Data Tools
+category.name.dataTools = SQL Development
