--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
@@ -17,6 +17,6 @@ Extension.PropertyPage.Version.Name = Version
 ProfileFailure = Data Source Explorer Failures
 Extension.NewWizard.Name = Connection Profile
 Extension.NewWizard.Description = Create a connection profile
-datatools.preference.page.name=Data Tools
+datatools.preference.page.name=Connectivity
 drivers.preference.page.name = Driver Definitions
 category.name.connectionProfiles = Connection Profiles
