--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/plugin.properties
@@ -12,7 +12,7 @@ ExceptionDialog.seeErrorLogMessage = See error log for more details.
 SQLScrapbookPlugin.internal_error  = Internal error
 
 # ------- NewSQLScrapbookFileWizardPage------- 
-NewWizardCategoryName=Data
+NewWizardCategoryName=SQL Development
 NewSQLScrapbookPage.label=SQL Scrapbook Page
 NewSQLScrapbookPage.description=Create a SQL Scrapbook page
 
