--- a/plugins/org.eclipse.datatools.sqltools.plan/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.plan/plugin.properties
@@ -1,3 +1,3 @@
 PlanView.name=Execution Plan
-PlanView.preferencePage.title=Execution Plan Options
+PlanView.preferencePage.title=Execution Plan View Options
 DataTools.name=Data Tools
