Add marker declaration so that error marker can be shown

--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/plugin.properties
@@ -7,3 +7,6 @@ sqlEditorName=SQL Editor
 
 context.editingSQL.name=Editing SQL
 context.editingSQL.description=Editing SQL
+
+sqlProblemName=SQL Syntax Validation Problem
+sqlPortabilityName=SQL Portability Task
