To be compatible with the connectivity generic jdbc driver type name

--- a/plugins/org.eclipse.datatools.sqltools.db.generic/plugin.xml
+++ b/plugins/org.eclipse.datatools.sqltools.db.generic/plugin.xml
@@ -8,8 +8,8 @@
       <dbConfiguration
             description="Data tools generic database support"
             configurationClass="org.eclipse.datatools.sqltools.db.generic.GenericDBConfiguration"
-            product="Generic Database"
-            version="0.7.x"/>
+            product="Generic JDBC"
+            version="1.x"/>
    </extension>
 
 </plugin>
