--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/plugin.properties
@@ -9,12 +9,12 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 
-/**
- * <copyright>
- * </copyright>
- *
- * $Id: plugin.properties,v 1.3 2006/03/03 21:46:47 dpchou Exp $
- */
+#
+#<copyright>
+# </copyright>
+#
+# $Id: plugin.properties,v 1.4 2006/03/09 23:46:15 dpchou Exp $
+#/
 
 # ====================================================================
 # To code developer:
