--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/build.properties
@@ -1,6 +1,7 @@
 source.sqldebugcore.jar = src/
 output.sqldebugcore.jar = bin/
 bin.includes = META-INF/,\
+               plugin.xml,\
                sqldebugcore.jar,\
                about.html
 
