--- a/plugins/org.eclipse.datatools.sqltools.common.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.common.ui/build.properties
@@ -1,12 +1,11 @@
-source.sqltoolscommonui.jar = src/
-output.sqltoolscommonui.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
-               sqltoolscommonui.jar,\
+               .,\
                icons/,\
                about.html,\
                plugin.xml
 
-jars.extra.classpath =
 src.dir = src/
 plugin.version =	0.7.0.200602241
 javadoc.dir =		doc/api/
