--- a/plugins/org.eclipse.datatools.sqltools.db.derby/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.db.derby/build.properties
@@ -1,13 +1,12 @@
-source.sqlderby.jar = src/
-output.sqlderby.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = plugin.xml,\
                .,\
-               sqlderby.jar,\
+               .,\
                META-INF/,\
                about.html,\
                icons/
 
-jars.extra.classpath =
 src.dir =		src/
 plugin.version =	0.7.0.200602242
 javadoc.dir =		doc/api/
