--- a/plugins/org.eclipse.datatools.sqltools.db.generic/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.db.generic/build.properties
@@ -1,13 +1,11 @@
-source.genericdb.jar = src/
-output.genericdb.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = plugin.xml,\
-               genericdb.jar,\
+               .,\
                genericdb.jar,\
                META-INF/,\
-               about.html,\
-               grammar/
+               about.html
 
-jars.extra.classpath =
 src.dir =		src/
 plugin.version =	0.7.0.200602242
 javadoc.dir =		doc/api/
