--- a/plugins/org.eclipse.datatools.sqltools.debugger.core/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.debugger.core/build.properties
@@ -1,11 +1,11 @@
-source.sqldebugcore.jar = src/
-output.sqldebugcore.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
                plugin.xml,\
-               sqldebugcore.jar,\
-               about.html
+               .,\
+               about.html,\
+               icons/
 
-jars.extra.classpath =
 src.dir =		src/
 plugin.version =	0.7.0.200602242
 javadoc.dir =		doc/api/
