--- a/plugins/org.eclipse.datatools.sqltools.editor.core/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.editor.core/build.properties
@@ -1,13 +1,12 @@
-source.sqleditorframe.jar = src/
-output.sqleditorframe.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
-               sqleditorframe.jar,\
+               .,\
                plugin.xml,\
                .settings/,\
                schema/,\
                about.html
 
-jars.extra.classpath =
 src.dir =		src/
 plugin.version =	0.7.0.200602242
 javadoc.dir =		doc/api/
