--- a/plugins/org.eclipse.datatools.sqltools.plan/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.plan/build.properties
@@ -1,12 +1,12 @@
-source.sqlplan.jar = src/
-output.sqlplan.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
-               sqlplan.jar,\
+               .,\
                plugin.xml,\
                about.html,\
-               schema/
+               schema/,\
+               icons/
 
-jars.extra.classpath =
 src.dir =		src/
 plugin.version =	0.7.0.200602241
 javadoc.dir =		doc/api/
