--- a/plugins/org.eclipse.datatools.sqltools.result/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.result/build.properties
@@ -1,13 +1,12 @@
-source.sqlresult.jar = src/
-output.sqlresult.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
-               sqlresult.jar,\
+               .,\
                about.html,\
                icons/,\
                plugin.properties,\
                plugin.xml
                
-jars.extra.classpath =
 src.dir =		src/
 plugin.version =	0.7.0.200602241
 javadoc.dir =		doc/api/
