--- a/plugins/org.eclipse.datatools.sqltools.routineeditor/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.routineeditor/build.properties
@@ -1,13 +1,12 @@
-source.routineeditor.jar = src/
-output.routineeditor.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
-               routineeditor.jar,\
+               .,\
                plugin.xml,\
                plugin.properties,\
-               routineeditor.jar,\
                about.html,\
-               schema/
-jars.extra.classpath =
+               schema/,\
+               icons/
 src.dir =		src/
 plugin.version =	0.7.0.200603101
 javadoc.dir =		doc/api/
