--- a/plugins/org.eclipse.datatools.sqltools.sql/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sql/build.properties
@@ -1,11 +1,10 @@
-source.sqltools.jar = src/
-output.sqltools.jar = bin/
+source.. = src/
+output.. = bin/
 bin.includes = META-INF/,\
-               sqltools.jar,\
+               .,\
                icons/,\
                about.html
 
-jars.extra.classpath =
 src.dir =		src/
 plugin.version =	0.7.0.200602241
 javadoc.dir =		doc/api/
