--- a/plugins/org.eclipse.datatools.sqltools.sqleditor/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqleditor/build.properties
@@ -1,7 +1,7 @@
-jars.compile.order = sqleditor.jar
-source.sqleditor.jar = src/
-output.sqleditor.jar = bin/
-bin.includes = sqleditor.jar,\
+jars.compile.order = .
+source.. = src/
+output.. = bin/
+bin.includes = .,\
                schema/,\
                icons/,\
                plugin.xml,\
@@ -9,7 +9,6 @@ bin.includes = sqleditor.jar,\
                about.html,\
                META-INF/
                
-jars.extra.classpath =
 src.dir =		src/
 plugin.version =	0.7.0.200603101
 javadoc.dir =		doc/api/
