--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/build.properties
@@ -1,14 +1,13 @@
-jars.compile.order = sqlscrapbook.jar
-source.sqlscrapbook.jar = src/
-output.sqlscrapbook.jar = bin/
+jars.compile.order = .
+source.. = src/
+output.. = bin/
 bin.includes = plugin.xml,\
-               sqlscrapbook.jar,\
+               .,\
                plugin.properties,\
                images/,\
                about.html,\
                META-INF/
 
-jars.extra.classpath =
 src.dir =		src/
 plugin.version =	0.7.0.200603101
 javadoc.dir =		doc/api/
