[131869] Migrated embedded resource messages to NL fragments

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/build.properties
@@ -21,3 +21,5 @@ bin.includes = plugin.xml,\
                plugin*.properties,\
                icons/,\
                META-INF/
+download.dir =           ./download/
+custom = true
