[131869] Migrated embedded resource messages to NL fragments

--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
@@ -11,6 +11,8 @@
  *  Actuate Corporation - initial API and implementation
  *  
  *************************************************************************
+ *
+ * $Id: build.properties,v 1.5 2006/03/10 00:43:16 lchan Exp $
  */
 -->
 bin.includes = about.html,\
@@ -18,4 +20,5 @@ bin.includes = about.html,\
                META-INF/,\
                oda-flatfile.jar,\
                plugin*.properties
+download.dir =           ./download/
 custom = true
