[135045] Jar selected connectivity plug-ins

--- a/plugins/org.eclipse.datatools.connectivity.sqm.core/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.sqm.core/build.properties
@@ -9,18 +9,17 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 bin.includes = plugin.xml,\
-               rdbcore.jar,\
+               .,\
                plugin.properties,\
                schema/,\
                .options,\
                about.html,\
                META-INF/
-source.rdbcore.jar = src/
-src.includes = component.xml
+source.. = src/
+#src.includes = component.xml
 
-jars.extra.classpath =
 src.dir =		src/
-plugin.version =	0.7.0.200603071
+plugin.version =	0.9.0.200604051
 javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
