Re-factored the base oda plugin to move oda.consumer.helper implementation to a separate plugin.

--- a/plugins/org.eclipse.datatools.connectivity.oda/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/build.properties
@@ -17,13 +17,11 @@ oda.src.dir =         	 ./src/org/eclipse/datatools/connectivity/oda/
 consumer.helper.path =   **/consumer/**
 test.src.dir =       	 ./test/
 bin.dir =         		 ./bin/
-jars.compile.order =     oda.jar,\
-                         odaconsumer-helper.jar
+jars.compile.order =     oda.jar
 jars.extra.classpath =   
 bin.includes = about.html,\
                plugin.xml,\
                oda.jar,\
-               odaconsumer-helper.jar,\
                schema/datasource.exsd,\
                META-INF/
 jar.includes =           **/*.txt,\
