[135246] Supports the use of a custom driver bridge by an ODA consumer application

--- a/plugins/org.eclipse.datatools.connectivity.oda.consumer/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.consumer/build.properties
@@ -21,8 +21,9 @@ jar.includes =           **/*.txt,\
                          **/*.def,\
                          **/*.properties
 bin.includes = META-INF/,\
-               odaconsumer-helper.jar ,\
-               about.html
+               odaconsumer-helper.jar,\
+               about.html,\
+               plugin.xml
 javac.debug =            on
 javac.source =           1.4
 javac.target =           1.4
