[135246] Supports the use of a custom driver bridge by an ODA consumer application

--- a/plugins/org.eclipse.datatools.connectivity.oda.consumer/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.consumer/build.properties
@@ -23,7 +23,8 @@ jar.includes =           **/*.txt,\
 bin.includes = META-INF/,\
                odaconsumer-helper.jar,\
                about.html,\
-               plugin.xml
+               plugin.xml,\
+               schema/driverBridge.exsd
 javac.debug =            on
 javac.source =           1.4
 javac.target =           1.4
