--- a/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
@@ -1,26 +1,23 @@
-<!--
-/**
- *************************************************************************
- * Copyright (c) 2005, 2006 Actuate Corporation.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
- *
- * Contributors:
- *  Actuate Corporation - initial API and implementation
- *  
- *************************************************************************
- *
- * $Id: build.properties,v 1.4 2006/02/26 08:04:34 lchan Exp $
- */
--->
+#
+#*************************************************************************
+# Copyright (c) 2004, 2006 Actuate Corporation.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#  Actuate Corporation - initial API and implementation
+#  
+#*************************************************************************
+#
+# $Id$
+#
 bin.includes = plugin.xml,\
-               plugin*.properties,\
-               odadesign.jar,\
+               .,\
                about.html,\
-               META-INF/
-jars.compile.order = odadesign.jar
+               META-INF/,\
+               plugin.properties
 package.odadesign.jar = ./org/eclipse/datatools/connectivity/oda/design/
 src.dir =            	 ./src/
 odadesign.src.dir =     ./src/org/eclipse/datatools/connectivity/oda/design/
@@ -37,4 +34,5 @@ temp.dir =		         ./tempdir/
 plugin.destination =     ./
 javadoc.dir =            doc/api/
 download.dir =           ./download/
-custom = true
+source.. = src/
+output.. = bin/
