--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile.ui/build.properties
@@ -1,25 +1,22 @@
-<!--
-/**
- *************************************************************************
- * Copyright (c) 2006 Actuate Corporation.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
- *
- * Contributors:
- *  Actuate Corporation - initial API and implementation
- *  
- *************************************************************************
- */
--->
-source.oda-flatfileui.jar = src/
-output.oda-flatfileui.jar = bin/
+#
+#*************************************************************************
+# Copyright (c) 2006 Actuate Corporation.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#  Actuate Corporation - initial API and implementation
+#  
+#*************************************************************************
+#
+source.. = src/
+output.. = bin/
 bin.includes = plugin.xml,\
-               oda-flatfileui.jar,\
+               .,\
                about.html,\
-               plugin*.properties,\
                icons/,\
-               META-INF/
+               META-INF/,\
+               plugin.properties
 download.dir =           ./download/
-custom = true
