--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
@@ -1,24 +1,23 @@
-<!--
-/**
- *************************************************************************
- * Copyright (c) 2004, 2006 Actuate Corporation.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
- *
- * Contributors:
- *  Actuate Corporation - initial API and implementation
- *  
- *************************************************************************
- *
- * $Id: build.properties,v 1.5 2006/03/10 00:43:16 lchan Exp $
- */
--->
+#
+#*************************************************************************
+# Copyright (c) 2004, 2006 Actuate Corporation.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#  Actuate Corporation - initial API and implementation
+#  
+#*************************************************************************
+#
+# $Id$
+#
 bin.includes = about.html,\
                plugin.xml,\
                META-INF/,\
-               oda-flatfile.jar,\
-               plugin*.properties
+               .,\
+               plugin.properties
 download.dir =           ./download/
-custom = true
+source.. = src/
+output.. = bin/
