--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/build.properties
@@ -1,30 +1,27 @@
-<!--
-/**
- *************************************************************************
- * Copyright (c) 2005, 2006 Actuate Corporation.
- * All rights reserved. This program and the accompanying materials
- * are made available under the terms of the Eclipse Public License v1.0
- * which accompanies this distribution, and is available at
- * http://www.eclipse.org/legal/epl-v10.html
- *
- * Contributors:
- *  Actuate Corporation - initial API and implementation
- *  
- *************************************************************************
- */
--->
-source.odaprofile.jar = src/
-output.odaprofile.jar = bin/
+#
+#*************************************************************************
+# Copyright (c) 2004, 2006 Actuate Corporation.
+# All rights reserved. This program and the accompanying materials
+# are made available under the terms of the Eclipse Public License v1.0
+# which accompanies this distribution, and is available at
+# http://www.eclipse.org/legal/epl-v10.html
+#
+# Contributors:
+#  Actuate Corporation - initial API and implementation
+#  
+#*************************************************************************
+#
+source.. = src/
+output.. = bin/
 bin.includes = plugin.xml,\
                plugin.properties,\
-               odaprofile.jar,\
+               .,\
                about.html,\
                META-INF/
 package.odaprofile.jar = ./org/eclipse/datatools/connectivity/oda/profile/
 src.dir =            	 ./src/
 odaprofile.src.dir =     ./src/org/eclipse/datatools/connectivity/oda/profile/
 bin.dir =         		 ./bin/
-jars.extra.classpath =   
 jar.includes =           **/*.txt,\
                          **/*.xml,\
                          **/*.def,\
@@ -37,4 +34,3 @@ temp.dir =		         ./tempdir/
 plugin.destination =     ./
 javadoc.dir =            doc/api/
 download.dir =           ./download/
-custom = true
